// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`category snapshots disabled 1`] = `
<div
  className="category"
>
  <Wrapped
    className="placeholder"
    disabled={true}
  />
</div>
`;

exports[`category snapshots incorrect 1`] = `
<div
  className="category"
>
  <Wrapped
    className="placeholder"
  >
    <Wrapped
      categoryId="1"
      choiceIndex={0}
      correct={false}
      key="0"
    />
  </Wrapped>
</div>
`;

exports[`category snapshots renders 1`] = `
<div
  className="category"
>
  <Wrapped
    className="placeholder"
  />
</div>
`;
